--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pie-suhee.github.io/2023PJ-reactshop/",
   "name": "reactshop",
   "version": "0.1.0",
   "dependencies": {
@@ -8,7 +9,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,6 +37,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.15",
     "daisyui": "^3.5.1",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.27",
     "react": "^18.0.0-rc.1",
     "react-dom": "^18.0.0-rc.1",
